# households_price_predictions

./: .gitignore  pyproject.toml
notebooks/: data_exploring_and_analysis.ipynb
